# scholar_digest_ai

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
services/: embeddings.py  etl.py  llm.py
